--- a/kafka-single-node/docker-compose.yml
+++ b/kafka-single-node/docker-compose.yml
@@ -33,6 +33,7 @@ services:
     environment:
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: zookeeper:2181
       SCHEMA_REGISTRY_HOST_NAME: schema_registry
+      SCHEMA_REGISTRY_AVRO_COMPATIBILITY_LEVEL: forward
       # SCHEMA_REGISTRY_LISTENERS: http://schema_registry:8081
       # SCHEMA_REGISTRY_DEBUG: "true"
     networks:
