modifying config to ease azure functions testing

--- a/kafka-single-node/docker-compose.yml
+++ b/kafka-single-node/docker-compose.yml
@@ -6,39 +6,42 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
-    networks:
-      - microservices
+    # networks:
+    #   - microservices
 
   kafka:
     image: confluentinc/cp-kafka:latest
     container_name: kafka
     depends_on:
       - zookeeper
-    # ports:
-    #   - 9092:9092
+    ports:
+      - 9092:9092
+      - 19092:19092
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      # KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,CONNECTIONS_FROM_HOST://localhost:19092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT,CONNECTIONS_FROM_HOST:PLAINTEXT
       # KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    networks:
-      - microservices
+    # networks:
+    #   - microservices
 
   schema_registry:
     image: confluentinc/cp-schema-registry:latest
     hostname: schema_registry
     container_name: schema_registry
+    ports:
+      - 8081:8081
     environment:
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: zookeeper:2181
       SCHEMA_REGISTRY_HOST_NAME: schema_registry
       SCHEMA_REGISTRY_AVRO_COMPATIBILITY_LEVEL: forward
       # SCHEMA_REGISTRY_LISTENERS: http://schema_registry:8081
       # SCHEMA_REGISTRY_DEBUG: "true"
-    networks:
-      - microservices
+    # networks:
+    #   - microservices
 
-networks:
-  microservices:
-    name: microservices
+# networks:
+#   microservices:
+#     name: microservices
